--- a/koha-tmpl/intranet-tmpl/prog/en/labels/label-bib-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/labels/label-bib-search.tmpl
@@ -1,6 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Label and Barcode Printing &rsaquo; Search</title>
-<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Barcodes and Labels: Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <div id="main-compact">
 
 <h1>Search</h1>
