--- a/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
@@ -10,6 +10,10 @@
 <table>
 <caption>Various tools</caption>
 <tr>
+    <td><a href="/cgi-bin/koha/labels/label-home.pl">Label creator</a></td>
+    <td>Create printable labels and barcodes from catalog data.</td>
+</tr>
+<tr>
     <td><a href="/cgi-bin/koha/tools/barcodes.pl">Label generator</a></td>
     <td>Generate spine labels and barcodes</td>
 </tr>
